--- a/CodeyBLELibrary/BluetoothLE/BluetoothLE.csproj
+++ b/CodeyBLELibrary/BluetoothLE/BluetoothLE.csproj
@@ -42,16 +42,19 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Windows">
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Windows Kits\10\UnionMetadata\10.0.16299.0\Windows.winmd</HintPath>
+    <Reference Include="Windows, Version=255.255.255.255, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Program Files (x86)\Windows Kits\10\UnionMetadata\10.0.17134.0\Windows.winmd</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GattSampleContext.cs" />
     <Compile Include="ObservableBluetoothLEDevice.cs" />
     <Compile Include="ObservableGattCharacteristics.cs" />
+    <Compile Include="ObservableGattDescriptors.cs" />
     <Compile Include="ObservableGattDeviceService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Converters\Converters.cs" />
     <Compile Include="Services\DispatcherService\DispatcherService.cs" />
     <Compile Include="Services\GattUuidsService\GattUuidsService.cs" />
     <Compile Include="Services\Other\BytePadder.cs" />
@@ -68,5 +71,6 @@
       <Name>GattServicesLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
