--- a/CodeyBLELibrary/GattServicesLibrary/GattServicesLibrary.csproj
+++ b/CodeyBLELibrary/GattServicesLibrary/GattServicesLibrary.csproj
@@ -46,21 +46,26 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Windows">
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Windows Kits\10\UnionMetadata\10.0.16299.0\Windows.winmd</HintPath>
+    <Reference Include="Windows, Version=255.255.255.255, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Program Files (x86)\Windows Kits\10\UnionMetadata\10.0.17134.0\Windows.winmd</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CharacteristicParameterValues\CharacteristicParameterValueEnums.cs" />
+    <Compile Include="Characteristics\AlertNotificationControlPointCharacteristic.cs" />
     <Compile Include="Characteristics\BatteryLevelCharacteristic.cs" />
     <Compile Include="Characteristics\BloodPressureFeatureCharacteristic.cs" />
     <Compile Include="Characteristics\BloodPressureMeasurementCharacteristic.cs" />
+    <Compile Include="Characteristics\CurrentTimeCharacteristic.cs" />
     <Compile Include="Characteristics\HeartRateMeasurementCharacteristic.cs" />
     <Compile Include="Characteristics\MicrosoftIndicateCharacteristic.cs" />
     <Compile Include="Characteristics\MicrosoftNotifyCharacteristic.cs" />
     <Compile Include="Characteristics\MicrosoftReadCharacteristic.cs" />
     <Compile Include="Characteristics\MicrosoftReadLongCharacteristic.cs" />
     <Compile Include="Characteristics\MicrosoftWriteCharacteristic.cs" />
+    <Compile Include="Characteristics\NewAlertCharacteristic.cs" />
+    <Compile Include="Characteristics\UnreadAlertStatusCharacteristic.cs" />
     <Compile Include="GenericGattCharacteristic.cs" />
     <Compile Include="GenericGattService.cs" />
     <Compile Include="Helpers\CreateServiceException.cs" />
