--- a/CodeyBLELibrary/CodeyBLELibrary/CodeyBLELibrary.csproj
+++ b/CodeyBLELibrary/CodeyBLELibrary/CodeyBLELibrary.csproj
@@ -38,14 +38,16 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Windows, Version=255.255.255.255, Culture=neutral, PublicKeyToken=null" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeyConnecter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GattServicesLibrary\GattServicesLibrary.csproj">
-      <Project>{9b37c79b-db63-4827-be09-7923e4f983b3}</Project>
-      <Name>GattServicesLibrary</Name>
+    <ProjectReference Include="..\BluetoothLE\BluetoothLE.csproj">
+      <Project>{abe6d82f-3842-4ad5-bcd1-1df08248d2bb}</Project>
+      <Name>BluetoothLE</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
