--- a/CodeyBLELibrary/CodeyBLELibrary/CodeyBLELibrary.csproj
+++ b/CodeyBLELibrary/CodeyBLELibrary/CodeyBLELibrary.csproj
@@ -41,7 +41,12 @@
     <Reference Include="Windows, Version=255.255.255.255, Culture=neutral, PublicKeyToken=null" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CodeyConnecter.cs" />
+    <Compile Include="Codey.cs" />
+    <Compile Include="BroadcastMessage.cs" />
+    <Compile Include="CodeyShareable.cs" />
+    <Compile Include="CodeyProtocolParser.cs" />
+    <Compile Include="CodeyProtocolSerializer.cs" />
+    <Compile Include="SharedVariable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
