--- a/CodeyBLELibrary/CodeyBLELibrary/CodeyBLELibrary.csproj
+++ b/CodeyBLELibrary/CodeyBLELibrary/CodeyBLELibrary.csproj
@@ -44,10 +44,12 @@
     <Compile Include="Codey.cs" />
     <Compile Include="BroadcastMessage.cs" />
     <Compile Include="CodeyPacket.cs" />
+    <Compile Include="CodeyPacketType.cs" />
     <Compile Include="CodeyShareableFactory.cs" />
+    <Compile Include="Heartbeat.cs" />
     <Compile Include="ICodeyShareable.cs" />
     <Compile Include="CodeyProtocolParser.cs" />
-    <Compile Include="CodeyProtocolSerializer.cs" />
+    <Compile Include="SharedBase.cs" />
     <Compile Include="SharedVariable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
