实现了消息和变量序列化功能。

--- a/CodeyBLELibrary/CodeyBLELibrary/CodeyBLELibrary.csproj
+++ b/CodeyBLELibrary/CodeyBLELibrary/CodeyBLELibrary.csproj
@@ -45,6 +45,7 @@
     <Compile Include="BroadcastMessage.cs" />
     <Compile Include="CodeyPacket.cs" />
     <Compile Include="CodeyPacketType.cs" />
+    <Compile Include="CodeyProtocolSerializer.cs" />
     <Compile Include="CodeyShareableFactory.cs" />
     <Compile Include="Heartbeat.cs" />
     <Compile Include="ICodeyShareable.cs" />
